[project]
name = "social-signal"
version = "0.1.0"
description = "Query Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
    "torch>=2.9.0", 
    "datasets>=4.4.1", 
    "transformers>=4.57.1", 
    "pandas>=2.3.3", 
    "matplotlib>=3.10.7", 
    "numpy>=2.2.6", 
    "scikit-learn>=1.7.2"
]

[project.optional-dependencies]
test = ["pytest>=9.0.1",]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "UP", # pyupgrade
]

ignore = [
    "E501", # line-too-long
]